# python-adspower

./: .gitignore  README.md  pyproject.toml  scratch.py
.github/workflows/: ci.yml
examples/: bulk_open.py  playwright_scrape.py
src/: __init__.py  client.py  exceptions.py
src/api/: __init__.py  base.py  browser.py  profiles.py
src/models/: __init__.py  fingerprint.py  profile.py  proxy.py
src/services/: __init__.py  health.py  manager.py  sync.py
tests/: test_api.py  test_exceptions.py  test_fingerprint.py  test_models.py  test_proxy.py
