[project]
name = "python-adspower"
version = "0.1.0"
description = "Async Python client for the AdsPower local API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "tenacity>=8.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"adspower" = "src"}
packages = ["adspower", "adspower.api", "adspower.models", "adspower.services"]
