[project]
name = "python-adspower"
version = "0.1.0"
description = "Async Python client for the AdsPower local API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "tenacity>=8.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"adspower" = "src"}
packages = ["adspower", "adspower.api", "adspower.models", "adspower.services"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint]
ignore = ["E701", "E302", "E303"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_return_any = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.api.profiles"
disable_error_code = ["valid-type", "misc", "attr-defined"]
